<resources>
    <string name="app_name">StoryApp</string>
    <string name="welcome_text">Welcome to story app!</string>
    <string name="welcome_desc">Share your best moments in a special way and make every story more meaningful. Tell your life story, whether its a small, warm moment or a big, thrilling adventure. Get inspired by millions of other fascinating stories shared by people around the world. Because every story has beauty, and the world is full of things worth telling.</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="logout">Logout</string>
    <string name="language">Language</string>
    <string name="appwidget_text">Story App</string>
    <string name="empty_text">No data</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="retry">Try Again</string>
</resources>